<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/layout_bg"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/show_on_map"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_map_2" />

    <TextView
        android:text="@string/open_new_tab"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_new_2" />

    <TextView
        android:text="@string/erase"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remove"/>

</LinearLayout>