<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout">
        <TextView
            android:text="@string/nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nearby_footer_tv" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout1">
        <TextView
            android:text="@string/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorites_footer_tv" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout2">

        <TextView
            android:text="@string/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history_footer_tv" />
    </RelativeLayout>
</RelativeLayout>
