<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/layout_bg"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/open_new_tab"
        android:textSize="12sp"
        android:clickable="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/open_new"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_height="25dp"
        android:layout_width="400dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_height="20dp"
        android:id="@+id/distance"
        android:layout_width="200dp"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <TextView
        android:text="@string/navigate"
        android:textSize="12sp"
        android:clickable="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/navigate"
        android:layout_below="@+id/open_new"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/add_to_fav"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/favorites"
        android:layout_below="@+id/navigate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        app:srcCompat="@drawable/layout_bg"
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_alignTop="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>